modify project title in portfolio

--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-react">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/app1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/web3.jpg" class="img-fluid" alt="">
                 <p>React, Node, MongoDB</p>
-                <a href="assets/img/portfolio/app1.jpg" class="link-preview portfolio-lightbox"
+                <a href="assets/img/portfolio/web3.jpg" class="link-preview portfolio-lightbox"
                   data-gallery="portfolioGallery"
                   title="Vervoe (React, Node, MongoDB)"><i class="bi bi-plus"></i></a>
                 <a href="https://vervoe.com" class="link-details" title="Go to website" target="_blank"><i class="bi bi-link"></i></a>
@@ -351,8 +351,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-vue filter-laravel">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web3.jpg" class="link-preview portfolio-lightbox"
+                <img src="assets/img/portfolio/app1.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/app1.jpg" class="link-preview portfolio-lightbox"
                   data-gallery="portfolioGallery" title="Wedo (Nuxtjs, Vue, Laravel, AWS, MySQL)"><i class="bi bi-plus"></i></a>
                 <a href="https://wedo.lu" class="link-details" title="Go to website" target="_blank"><i class="bi bi-link"></i></a>
               </figure>
@@ -621,7 +621,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 805 354 5844</a></p>
+              <p><a href="tel:++18053545844">+1 805 354 5844</a></p>
             </div>
           </div>
 
@@ -629,7 +629,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:info@example.com">support@apptech.technology</a></p>
+              <p><a href="mailto:support@apptech.technology">support@apptech.technology</a></p>
             </div>
           </div>
 
