contents updated for TRAVIS DEAN ASHLEY

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>APPTECH Technology</title>
+  <title>Travis Dean Ashley</title>
   <meta content="" name="description">
   <meta content="Software, Web development, Mobile app development" name="keywords">
 
@@ -16,7 +16,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700"
     rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -45,8 +45,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
           <h1 class="logo"><a href="index.html">
-              <img src="icon.svg" width="40px" height="40px" alt="">
-              <img src="logo.svg" width="300px" alt="">
+              Travis Dean Ashley
             </a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -79,13 +78,13 @@
           <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/1.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Unleash Digital Excellence with APPTECH Technology
+                <h2 class="animate__animated animate__fadeInDown">Unleash Digital Excellence with Travis Dean Ashley
                 </h2>
                 <p class="animate__animated animate__fadeInUp">Elevate your business to new heights with innovative
-                  software solutions from APPTECH Technology. Our expert team crafts custom software, web, and mobile
+                  software solutions from Travis Dean Ashley. Our expert team crafts custom software, web, and mobile
                   applications, integrating cutting-edge technologies to fuel your success. Experience the power of
                   tailored solutions designed to transform your ideas into digital reality. Explore limitless
-                  possibilities – choose APPTECH for a future-driven digital journey.</p>
+                  possibilities – choose Travis Dean Ashley for a future-driven digital journey.</p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get
                   Started</a>
               </div>
@@ -97,7 +96,7 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">Empowering Tomorrow's Success Today</h2>
                 <p class="animate__animated animate__fadeInUp">Join the forefront of technological innovation with
-                  APPTECH Technology. Our comprehensive software solutions, powered by AI, machine learning, and robust
+                  Travis Dean Ashley. Our comprehensive software solutions, powered by AI, machine learning, and robust
                   development, pave the way for your business to thrive in the digital landscape. Embrace efficiency,
                   security, and unparalleled performance. Your success story begins here.</p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get
@@ -111,9 +110,9 @@
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">Seamless Solutions, Endless Possibilities</h2>
                 <p class="animate__animated animate__fadeInUp">Discover the art of seamless business operations with
-                  APPTECH Technology. From custom software development to cloud computing services, we redefine
+                  Travis Dean Ashley. From custom software development to cloud computing services, we redefine
                   possibilities. Elevate your digital presence, optimize resources, and unlock a future where your
-                  business effortlessly adapts and excels. Choose APPTECH – where innovation meets limitless potential.
+                  business effortlessly adapts and excels. Choose Travis Dean Ashley – where innovation meets limitless potential.
                 </p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get
                   Started</a>
@@ -157,7 +156,7 @@
               </div>
               <h2 class="title"><a href="#">Our Mission</a></h2>
               <p>
-                At Apptech Technology, our mission is to empower businesses through innovative software solutions. We
+                At Travis Dean Ashley, our mission is to empower businesses through innovative software solutions. We
                 strive to exceed expectations, delivering tailored technology that enhances efficiency, fosters growth,
                 and transforms challenges into opportunities.
               </p>
@@ -172,7 +171,7 @@
               </div>
               <h2 class="title"><a href="#">Our Plan</a></h2>
               <p>
-                Our vision at Apptech is to be a global leader in shaping the future of digital experiences. We aspire
+                Our vision at Travis Dean Ashley is to be a global leader in shaping the future of digital experiences. We aspire
                 to create impactful solutions that inspire positive change, driving businesses towards unparalleled
                 success in the ever-evolving technological landscape.
               </p>
@@ -189,7 +188,7 @@
               <p>
                 Our strategic plan revolves around continuous innovation and client-centricity. We are committed to
                 staying ahead of industry trends, fostering a collaborative approach, and delivering high-quality,
-                scalable solutions. Apptech's plan is to be your trusted partner on the journey to digital excellence.
+                scalable solutions. Travis Dean Ashley's plan is to be your trusted partner on the journey to digital excellence.
               </p>
             </div>
           </div>
@@ -206,7 +205,7 @@
         <header class="section-header wow fadeInUp">
           <h3>Services</h3>
           <p>Explore Our Comprehensive Web and Mobile Development Solutions. From Custom Web Development to
-            Cross-Platform Excellence, Apptech Technology Unleashes the Power of Digital Innovation for Your Business
+            Cross-Platform Excellence, Travis Dean Ashley Unleashes the Power of Digital Innovation for Your Business
             Success.</p>
         </header>
 
@@ -260,7 +259,7 @@
         <h3>Call To Action</h3>
         <p>Contact us today for tailored software solutions that redefine possibilities and drive your business towards
           unparalleled success. Let's embark on a journey of digital excellence together!</p>
-        <a class="cta-btn" href="tel:+1-805-354-5844">Call Us Now</a>
+        <a class="cta-btn" href="tel:+1-929-568-0014">Call Us Now</a>
       </div>
     </section><!-- End Call To Action Section -->
 
@@ -271,7 +270,7 @@
         <header class="section-header">
           <h3>Facts</h3>
           <p>Unveiling Key Facts. Delve into the statistics and milestones that define our journey. From successful
-            projects to satisfied clients, explore the quantitative essence of Apptech's commitment to excellence in
+            projects to satisfied clients, explore the quantitative essence of Travis Dean Ashley's commitment to excellence in
             software </p>
         </header>
 
@@ -531,7 +530,7 @@
                 <h4>CEO, Tech Innovators Inc.</h4>
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Apptech Technology exceeded our expectations. Their custom software solutions streamlined our
+                  Travis Dean Ashley exceeded our expectations. Their custom software solutions streamlined our
                   operations, boosting efficiency. Exceptional service!
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
@@ -558,7 +557,7 @@
                 <h4>E-commerce Manager, TrendyStyles Boutique</h4>
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Apptech's e-commerce solutions enhanced user experience, driving sales and customer satisfaction.
+                  Travis Dean Ashley's e-commerce solutions enhanced user experience, driving sales and customer satisfaction.
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
               </div>
@@ -571,7 +570,7 @@
                 <h4>CTO, Innovative Solutions Ltd.</h4>
                 <p>
                   <img src="assets/img/quote-sign-left.png" class="quote-sign-left" alt="">
-                  Apptech's creativity and attention to detail significantly improved user engagement.
+                  Travis Dean Ashley's creativity and attention to detail significantly improved user engagement.
                   <img src="assets/img/quote-sign-right.png" class="quote-sign-right" alt="">
                 </p>
               </div>
@@ -613,7 +612,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>100 BRUSH BLVD, GOOSE CREEK, SC 29486</address>
+              <address>7905 LAKELAND BLVD, FORT PIERCE, FL 34951</address>
             </div>
           </div>
 
@@ -621,7 +620,7 @@
             <div class="contact-phone">
               <i class="bi bi-phone"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:++18053545844">+1 805 354 5844</a></p>
+              <p><a href="tel:+1-929-568-0014">+1-929-568-0014</a></p>
             </div>
           </div>
 
@@ -629,7 +628,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:support@apptech.technology">support@apptech.technology</a></p>
+              <p><a href="mailto:travisdeanashleyllc@gmail.com">travisdeanashleyllc@gmail.com</a></p>
             </div>
           </div>
 
@@ -673,8 +672,7 @@
 
           <div class="col-lg-3 col-md-6 footer-info">
             <div class="mb-4">
-              <img class="me-2" src="icon.svg" width="30px" height="30px" alt="">
-              <img src="logo.svg" width="200px" alt="">
+              <h3 style="font-family: 'Luxurious Script', cursive;">Travis Dean Ashley</h3>
             </div>
             <p>As a leading software company, we specialize in crafting custom solutions for web and mobile development,
               ensuring innovation, reliability, and transformative impact. Join us in redefining possibilities in the
@@ -695,11 +693,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              100 BRUSH BLVD <br>
-              GOOSE CREEK, SC 29486<br>
+              7905 LAKELAND BLVD <br>
+              FORT PIERCE, FL 34951<br>
               United States <br>
-              <strong>Phone:</strong> +1 805 354 5844<br>
-              <strong>Email:</strong> support@apptech.technology<br>
+              <strong>Phone:</strong> +1 929 568 0014<br>
+              <strong>Email:</strong> travisdeanashleyllc@gmail.com<br>
             </p>
 
           </div>
@@ -718,7 +716,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>APPTECH Technology</strong>. All Rights Reserved
+        &copy; Copyright <strong>Travis Dean Ashley</strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
