Update support email address

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
             <div class="contact-email">
               <i class="bi bi-envelope"></i>
               <h3>Email</h3>
-              <p><a href="mailto:support@apptech.technology">support@apptech.technology</a></p>
+              <p><a href="mailto:travashley826@gmail.com">travashley826@gmail.com</a></p>
             </div>
           </div>
 
@@ -699,7 +699,7 @@
               GOOSE CREEK, SC 29486<br>
               United States <br>
               <strong>Phone:</strong> +1 805 354 5844<br>
-              <strong>Email:</strong> support@apptech.technology<br>
+              <strong>Email:</strong> travashley826@gmail.com<br>
             </p>
 
           </div>
